--- a/Index.html
+++ b/Index.html
@@ -3,25 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lab 6 - Like/Dislike System</title>
+    <title>Lab 06: JavaScript</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <h1>Lab 6</h1>
     <h2>Like or dislike</h2>
+
     <div class="buttons">
-        <button id="likeBtn" class="button">👍 <span id="likeCount">0</span></button>
-        <button id="dislikeBtn" class="button">👎 <span id="dislikeCount">0</span></button>
+        <button id="likeButton">👍 Like (<span id="likeCount">0</span>)</button>
+        <button id="dislikeButton">👎 Dislike (<span id="dislikeCount">0</span>)</button>
     </div>
-    <h3>Comments</h3>
-    <div class="comments">
-        <textarea id="commentInput" placeholder="Write a comment..."></textarea>
-        <div class="comment-buttons">
-            <button id="commentSubmit" class="submit">Submit</button>
-            <button id="resetBtn" class="clear">Clear</button>
+
+    <h2>Comments</h2>
+    <div class="comment-section">
+        <textarea id="commentInput" placeholder="Wirite a comment..." disabled></textarea>
+        <div>
+            <button id="commentSubmit" disabled>Submit</button>
+            <button id="resetBtn">Clear</button>
         </div>
-        <div id="commentsList"></div>
     </div>
+
+    <div id="commentsList"></div>
+
     <script src="script.js"></script>
 </body>
 </html>
